tools/tests/errors/unpack_two_stars.experr
two starred targets in assignment
